# mini_2

./: .gitignore  BENCHMARKS.md  README.md  REPORT.md  pyproject.toml
bench/: bench.py  edge_cases.json  edge_cases.py  results.json  run_full_bench.sh  topo_bench.py  topo_compare.py
bench/results/: _summary.json  chain.json  chain__trip_distance__t8__c0.json  grid__trip_distance__t8__c0.json  star.json  star__trip_distance__t8__c0.json  tree.json  tree__consistent_hash__t16__c0.json  tree__consistent_hash__t8__c0.json  tree__pickup_datetime__t8__c0.json  tree__pu_location_id__t8__c0.json  tree__round_robin__t8__c0.json  tree__trip_distance__t16__c0.json  tree__trip_distance__t1__c0.json  tree__trip_distance__t2__c0.json  tree__trip_distance__t4__c0.json  tree__trip_distance__t8__c0.json  tree__trip_distance__t8__c1024.json  tree__trip_distance__t8__c2048.json  tree__trip_distance__t8__c256.json  tree__trip_distance__t8__c4096.json  tree__trip_distance__t8__c8192.json
benchmark_results/: 01_single_predicate.json  02_joint_queries.json  03_concurrency.json  04_chunk_size.json  05_edge_cases.json  06_worker_threads.json
config/: overlay.yaml
config/topo/: binary_tree.yaml  chain.yaml  grid.yaml  mesh.yaml  random_k.yaml  ring.yaml  star.yaml  tree.yaml
cpp/: CMakeLists.txt
cpp/client/: client.cpp
cpp/common/: csv_store.cpp  csv_store.hpp  overlay.cpp  overlay.hpp  routing.cpp  routing.hpp  scheduler.cpp  scheduler.hpp  telemetry.cpp  telemetry.hpp
cpp/server/: node.cpp
logs/: latest  pids.txt
logs/run-20260501T032542Z/: META.txt  pids.txt
logs/run-20260501T032606Z/: META.txt  pids.txt
logs/run-20260501T032917Z/: META.txt  pids.txt
logs/run-20260501T033254Z/: META.txt  pids.txt
logs/run-20260501T033255Z/: META.txt  pids.txt
logs/run-20260501T033955Z/: META.txt  pids.txt
logs/run-20260501T034617Z/: META.txt  pids.txt
logs/run-20260508T233359Z/: META.txt  pids.txt
logs/run-20260509T001820Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T031522Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T221846Z/: META.txt  pids.txt
logs/run-20260509T222026Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T224718Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225032Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225039Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225046Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225053Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225101Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225108Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225116Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225123Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225130Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225138Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225146Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225153Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225200Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225208Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225216Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225223Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225231Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T225238Z/: META.txt
logs/run-20260509T231430Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231720Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231729Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231738Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231748Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231802Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231811Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231819Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231827Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231835Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231843Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231852Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231900Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231908Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231916Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T231953Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T232414Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T233006Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T233633Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T234222Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T234311Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T234548Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T234827Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T235105Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T235349Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260509T235622Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T000410Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T000748Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T001051Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T001335Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T001609Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T002039Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T002538Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T003208Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T025238Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T025644Z/: META.txt  pids.txt  telemetry-A.jsonl
logs/run-20260510T030010Z/: META.txt  pids.txt  (+1 more)
proto/: mini2.proto
scripts/: deploy.sh  split_taxi_csv.py  start_all_local.sh  start_multihost.sh  start_node.sh  stop_all.sh  stop_multihost.sh
(+58 files in other folders)
